--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Gửi em!</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="loader">
@@ -20,16 +24,14 @@
                 </div>
             </div>
         </div>
-        <button><p>Click vào đây nè:)))</p></button>
+        <button>
+            <p>Click vào đây nè:)))</p>
+        </button>
         <div class="content">
             <i class="fa-solid fa-xmark"></i>
-            <h1>Gửi em!</h1>
-            <p>Khi tôi và cậu vô tình nhìn nhau, cậu có 
-                rung động không? Khi tôi đùa giỡn với 
-                người khác, cậu có ghen không? Khi tôi nghỉ 
-                học vì bị ốm, cậu có lo lắng không? À mà chắc 
-                không đâu nhỉ, cậu có yêu tôi đâu. Tôi lại hỏi
-                 thừa rồi.
+            <h1>Gửi Hà Ngu Ngốc!</h1>
+            <p>
+                Hà Óc Chó
             </p>
         </div>
     </div>
@@ -37,21 +39,22 @@
 <script type="text/javascript" src="vanilla-tilt.js"></script>
 <script>
     VanillaTilt.init(document.querySelector(".wrapper"), {
-		max: 25,
-		speed: 400,
+        max: 25,
+        speed: 400,
         glare: true,
         "max-glare": 0.25,
         gyroscopeMinAngleX: -45,
-	});
-	var btn =document.querySelector("button")
+    });
+    var btn = document.querySelector("button")
     var closeBtn = document.querySelector(".fa-xmark");
-    btn.addEventListener("click", ()=>{
+    btn.addEventListener("click", () => {
         document.querySelector(".wrapper").classList.add("active")
-        btn.style.display="none";
+        btn.style.display = "none";
     })
-    closeBtn.addEventListener("click", ()=>{
+    closeBtn.addEventListener("click", () => {
         document.querySelector(".wrapper").classList.remove("active")
         btn.style.display = "block";
     })
 </script>
+
 </html>
