--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </button>
         <div class="content">
             <i class="fa-solid fa-xmark"></i>
-            <h1>Gửi Hà Ngu Ngốc!</h1>
+            <h1>Gửi AE!</h1>
             <p>
-                Hà Óc Chó
+                Mấy Con Lợn Cạo NTU =))
             </p>
         </div>
     </div>
