--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <i class="fa-solid fa-xmark"></i>
             <h1>Gửi AE!</h1>
             <p>
-                Mấy Con Lợn Cạo NTU =))
+                Gửi Hấp nhân ngày valentine chúc em sớm giảm được cân
             </p>
         </div>
     </div>
