--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
         <div class="content">
             <i class="fa-solid fa-xmark"></i>
-            <h1>Gửi AE!</h1>
+            <h1> Gửi Hấp! </h1>
             <p>
                 Gửi Hấp nhân ngày valentine chúc em sớm giảm được cân
             </p>
